@@ -1,5 +1,10 @@
 2002-01-21  Paolo Maggi  <maggi@athena.polito.it>
 
+	* docinfo/docinfo.c (word_count_real): destroy the dialog
+	if there is no active document.
+
+2002-01-21  Paolo Maggi  <maggi@athena.polito.it>
+
 	* docinfo/docinfo.glade2: new file
 
 	* docinfo/Makefile.am: install docinfo.glade2
