@@ -1,3 +1,13 @@
+2002-01-21  Marcel K. de Carli Silva <magaljedi@bol.com.br>
+
+	* gedit2.c (main): check if args != NULL only one time
+	(options): use POPT_ARG_NONE to indicate no argument
+
+	* gedit-prefs.c (gedit_prefs_save_color): new functio
+	(gedit_prefs_load_color): ditto
+	(gedit_prefs_save_settings): use gedit_prefs_save_color
+	(gedit_prefs_load_settings): use gedit_prefs_load_color
+
 2002-01-20  Paolo Maggi  <maggi@athena.polito.it>
 
 	* gedit-plugins-engine.c (gedit_plugins_engine_load):
